Add subpage for LyricParser

--- a/index.html
+++ b/index.html
@@ -107,19 +107,10 @@
         </p>
 
         <div class="portfolio">
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/sav-00.png" alt="" class="portfolio__img" />
+            <a href="lyricparser.html" class="portfolio__item">
+                <img src="img/lyricparser-00.png" alt="" class="portfolio__img" />
             </a>
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/sav-00.png" alt="" class="portfolio__img" />
-            </a>
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/sav-00.png" alt="" class="portfolio__img" />
-            </a>
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/sav-00.png" alt="" class="portfolio__img" />
-            </a>
-            <a href="portfolio-item.html" class="portfolio__item">
+            <a href="sorting-algorithm-visualizer.html" class="portfolio__item">
                 <img src="img/sav-00.png" alt="" class="portfolio__img" />
             </a>
         </div>
