Change projects title and subtitle

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     </section>
 
     <section class="my-work" id="work">
-        <h2 class="section__title section__title--work">My Work</h2>
+        <h2 class="section__title section__title--work">Projects</h2>
         <p class="section__subtitle section__subtitle--work">
-            A selection of my range of work
+            A selection of my personal projects
         </p>
 
         <div class="portfolio">
