Wrap projects in container div

--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
         </p>
 
         <div class="portfolio">
-            <a href="lyricparser.html" class="portfolio__item">
-                <img src="img/lyricparser-00.png" alt="" class="portfolio__img" />
-            </a>
-            <a href="sorting-algorithm-visualizer.html" class="portfolio__item">
-                <img src="img/sav-00.png" alt="" class="portfolio__img" />
-            </a>
+            <div class="portfolio--container">
+                <a href="lyricparser.html" class="portfolio__item">
+                    <img src="img/lyricparser-00.png" alt="" class="portfolio__img" />
+                </a>
+                <a href="sorting-algorithm-visualizer.html" class="portfolio__item">
+                    <img src="img/sav-00.png" alt="" class="portfolio__img" />
+                </a>
+            </div>
         </div>
     </section>
 
