Change services from dummy text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/45a9f6f0c7.js" crossorigin="anonymous"></script>
 </head>
@@ -48,39 +49,37 @@
     </section>
 
     <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>Design + Development</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
+                <div class="hexagon">
+                    <i class="fas fa-universal-access fa-w-16 fa-6x"></i>
+                </div>
+                <div class="service__description">
+                    <strong>Accessability</strong>
+                    <p>Strive to be accessible to everyone - Mental or physical impairments should not stop anyone from
+                        enoying the world
+                        wide web</p>
+                </div>
             </div>
-
             <div class="service">
-                <h3>E-Commerce</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
+                <div class="hexagon">
+                    <i class="fas fa-tablet-alt fa-w-16 fa-6x"></i>
+                </div>
+                <div class="service__description">
+                    <strong>Responsive</strong>
+                    <p>Responsive design makes sure you can enjoy my layout on any device</p>
+                </div>
             </div>
-
             <div class="service">
-                <h3>WordPress</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
+                <div class="hexagon">
+                    <i class="fas fa-hourglass-end fa-w-16 fa-6x"></i>
+                </div>
+                <div class="service__description">
+                    <strong>Speed</strong>
+                    <p>Lightweight & fast loading - Because time is money, friend</p>
+                </div>
             </div>
         </div>
-        <a href="#work" class="btn">My Work</a>
     </section>
 
     <section class="about-me" id="about">
