Change portfolio item font to PT Sans

--- a/sorting-algorithm-visualizer.html
+++ b/sorting-algorithm-visualizer.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sorting Algorithm Visualizer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
-    rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
   <script src="https://kit.fontawesome.com/45a9f6f0c7.js" crossorigin="anonymous"></script>
 </head>
@@ -48,13 +46,12 @@
   </section>
 
   <div class="portfolio-item-individual">
-    <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas
-      sapiente voluptate, magnam ipsum eius earum?</p>
+    <p>Generates a bar graph visualization of an array, sorts it using one out of 10 predefined algorithms and updates
+      the graph in realtime.</p>
     <img src="img/sav-background.png" alt="">
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti
-      fugiat ducimus consequatur incidunt?</p>
-    <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas
-      sapiente voluptate, magnam ipsum eius earum?</p>
+    <p>Predefined sorting algorithms: Selection Sort, Bubble Sort, Insertion Sort, Merge Sort, Quicksort (Lomuto
+      Partition Scheme), Quicksort (Hoare Partition Scheme), Heap Sort, Counting Sort [WIP], Radix Sort [WIP], Bucket
+      Sort [WIP]</p>
   </div>
 
   <a href="#top" class="top-button btn">TOP</a>
