Add description and link to SAV

--- a/sorting-algorithm-visualizer.html
+++ b/sorting-algorithm-visualizer.html
@@ -52,9 +52,11 @@
     <p>Predefined sorting algorithms: Selection Sort, Bubble Sort, Insertion Sort, Merge Sort, Quicksort (Lomuto
       Partition Scheme), Quicksort (Hoare Partition Scheme), Heap Sort, Counting Sort [WIP], Radix Sort [WIP], Bucket
       Sort [WIP]</p>
+    <a href="https://mikan9.github.io/sorting-visualizer/" class="view-site btn">view site<i
+        class="fas fa-external-link-alt"></i></a>
   </div>
 
-  <a href="#top" class="top-button btn">TOP</a>
+  <a href="#top" class="top-button btn">top</a>
 
   <footer class="footer">
     <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie@gmail.com</a>
