--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <header id="top">
         <div class="logo">
-            <img src="img/logo.png" alt="" />
+            <a href="index.html">
+                <img src="img/logo.png" alt="" />
+            </a>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
