Add correct alt tags to images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="top">
         <div class="logo">
             <a href="index.html">
-                <img src="img/logo.png" alt="" />
+                <img src="img/logo.png" alt="site logo" />
             </a>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
@@ -44,7 +44,7 @@
             Hi, I am <strong>Stephanie Ahlström</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-        <img src="img/profile-01.jpg" alt="a picture of Jane Smith smiling" class="intro__img" />
+        <img src="img/profile-01.jpg" alt="a picture of Stephanie's avatar" class="intro__img" />
     </section>
 
     <section class="my-services" id="services">
@@ -95,7 +95,7 @@
             <p>HTML/CSS/JS, .NET, React</p>
         </div>
 
-        <img src="img/profile-02.png" alt="Jane leaning against a bus" class="about-me__img" />
+        <img src="img/profile-02.png" alt="filtered picture of Stephanie" class="about-me__img" />
     </section>
 
     <section class="my-work" id="work">
