--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <a href="#home" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#services" class="nav__link">My Services</a>
+                    <a href="#services" class="nav__link">Services</a>
                 </li>
                 <li class="nav__item">
                     <a href="#about" class="nav__link">About me</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#work" class="nav__link">My work</a>
+                    <a href="#work" class="nav__link">Projects</a>
                 </li>
             </ul>
         </nav>
