--- a/lyricparser.html
+++ b/lyricparser.html
@@ -27,13 +27,13 @@
           <a href="index.html#home" class="nav__link">Home</a>
         </li>
         <li class="nav__item">
-          <a href="index.html#services" class="nav__link">My Services</a>
+          <a href="index.html#services" class="nav__link">Services</a>
         </li>
         <li class="nav__item">
           <a href="index.html#about" class="nav__link">About me</a>
         </li>
         <li class="nav__item">
-          <a href="index.html#work" class="nav__link">My work</a>
+          <a href="index.html#work" class="nav__link">Projects</a>
         </li>
       </ul>
     </nav>
