Add nav button animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header id="top">
+    <header id="home">
         <div class="logo">
             <a href="index.html">
                 <img src="img/logo.png" alt="site logo" />
@@ -23,7 +23,7 @@
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item">
+                <li class="nav__item active">
                     <a href="#home" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <section class="intro" id="home">
+    <section class="intro">
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Stephanie Ahlström</strong>
         </h1>
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <a href="#top" class="top-button btn">TOP</a>
+    <a href="#home" class="top-button btn">top</a>
 
     <footer class="footer">
         <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie@gmail.com</a>
@@ -137,6 +137,7 @@
         </ul>
     </footer>
 
+    <script src="js/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 
