--- a/lyricparser.html
+++ b/lyricparser.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header id="top">
+  <header id="home">
     <div class="logo">
       <a href="index.html">
         <img src="img/logo.png" alt="" />
@@ -39,7 +39,7 @@
     </nav>
   </header>
 
-  <section class="intro" id="home">
+  <section class="intro">
     <h1 class="section__title section__title--intro">
       Lyric <strong>Parser</strong>
     </h1>
@@ -53,7 +53,7 @@
     <img src="img/lyricparser-background.png" alt="">
   </div>
 
-  <a href="#top" class="top-button btn">TOP</a>
+  <a href="#home" class="top-button btn">top</a>
 
   <footer class="footer">
     <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie@gmail.com</a>
