--- a/sorting-algorithm-visualizer.html
+++ b/sorting-algorithm-visualizer.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header id="top">
+  <header id="home">
     <div class="logo">
       <a href="index.html">
         <img src="img/logo.png" alt="" />
@@ -39,7 +39,7 @@
     </nav>
   </header>
 
-  <section class="intro" id="home">
+  <section class="intro">
     <h1 class="section__title section__title--intro">
       Sorting <strong>Algorithm Visualizer</strong>
     </h1>
@@ -58,7 +58,7 @@
         class="fas fa-external-link-alt"></i></a>
   </div>
 
-  <a href="#top" class="top-button btn">top</a>
+  <a href="#home" class="top-button btn">top</a>
 
   <footer class="footer">
     <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie@gmail.com</a>
