--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                 Front-end developer residing in Sweden with a serious passion for gaming, programming and music.
                 Striving to make the web more intuitive, dynamic and user-friendly.
             </p>
-            <p>HTML/CSS/JS, .NET, React</p>
+            <p>Huge Supernatural geek. Like my coffee black and tea bitter. Listen to everything from heavy metal to
+                EDM. Christmas songs in the summer, don't judge me.</p>
+            <p>Mainly work with HTML/CSS/JS, .NET, React</p>
         </div>
 
         <img src="img/profile-02.png" alt="filtered picture of Stephanie" class="about-me__img" />
