--- a/sorting-algorithm-visualizer.html
+++ b/sorting-algorithm-visualizer.html
@@ -21,18 +21,18 @@
     <button class="nav-toggle" aria-label="toggle navigation">
       <span class="hamburger"></span>
     </button>
-    <nav class="nav">
+    <nav class="nav border-gradient-bottom">
       <ul class="nav__list">
-        <li class="nav__item">
+        <li class="nav__item border-gradient-top">
           <a href="index.html#home" class="nav__link">Home</a>
         </li>
-        <li class="nav__item">
+        <li class="nav__item border-gradient-top">
           <a href="index.html#services" class="nav__link">Services</a>
         </li>
-        <li class="nav__item">
+        <li class="nav__item border-gradient-top">
           <a href="index.html#about" class="nav__link">About me</a>
         </li>
-        <li class="nav__item">
+        <li class="nav__item border-gradient-top">
           <a href="index.html#work" class="nav__link">Projects</a>
         </li>
       </ul>
