--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
 
     <a href="#home" class="top-button btn">top</a>
 
-    <footer class="footer">
-        <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie@gmail.com</a>
-        <ul class="social-list">
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io/mikan9"><i class="fab fa-codepen"></i></a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com/mikanx9"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://linkedin.com/in/stephanie-ahlström"><i
-                        class="fab fa-linkedin"></i></a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com/mikan9/"><i class="fab fa-github"></i></a>
-            </li>
-        </ul>
+    <footer class="footer border-gradient-top">
+        <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie<WBR>@gmail.com</a>
+            <ul class="social-list">
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://codepen.io/mikan9"><i class="fab fa-codepen"></i></a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://twitter.com/mikanx9"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://linkedin.com/in/stephanie-ahlström"><i
+                            class="fab fa-linkedin"></i></a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://github.com/mikan9/"><i class="fab fa-github"></i></a>
+                </li>
+            </ul>
     </footer>
 
     <script src="js/jquery.min.js"></script>
