Redesign portfolio item hover effect

--- a/index.html
+++ b/index.html
@@ -107,13 +107,21 @@
         </p>
 
         <div class="portfolio">
-            <div class="portfolio--container">
-                <a href="lyricparser.html" class="portfolio__item">
+            <div class="portfolio__container">
+                <div class="portfolio__item">
                     <img src="img/lyricparser-00.png" alt="" class="portfolio__img" />
-                </a>
-                <a href="sorting-algorithm-visualizer.html" class="portfolio__item">
+                    <div class="portfolio__item__description">.NET / WPF</div>
+                    <a href="lyricparser.html" class="portfolio__item__button btn">
+                        more info
+                    </a>
+                </div>
+                <div class="portfolio__item">
                     <img src="img/sav-00.png" alt="" class="portfolio__img" />
-                </a>
+                    <div class="portfolio__item__description">React / Node.js</div>
+                    <a href="sorting-algorithm-visualizer.html" class="portfolio__item__button btn">
+                        more info
+                    </a>
+                </div>
             </div>
         </div>
     </section>
