--- a/index.html
+++ b/index.html
@@ -132,17 +132,20 @@
         <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie<WBR>@gmail.com</a>
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://codepen.io/mikan9"><i class="fab fa-codepen"></i></a>
+                    <a class="social-list__link" href="https://codepen.io/mikan9"
+                        aria-label="Stephanie Ahlström on Codepen"><i class="fab fa-codepen"></i></a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://twitter.com/mikanx9"><i class="fab fa-twitter"></i></a>
+                    <a class="social-list__link" href="https://twitter.com/mikanx9"
+                        aria-label="Stephanie Ahlström on Twitter"><i class="fab fa-twitter"></i></a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://linkedin.com/in/stephanie-ahlström"><i
-                            class="fab fa-linkedin"></i></a>
+                    <a class="social-list__link" href="https://linkedin.com/in/stephanie-ahlström"
+                        aria-label="Stephanie Ahlström on LinkIn"><i class="fab fa-linkedin"></i></a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://github.com/mikan9/"><i class="fab fa-github"></i></a>
+                    <a class="social-list__link" href="https://github.com/mikan9/"
+                        aria-label="Stephanie Ahlström on Github"><i class="fab fa-github"></i></a>
                 </li>
             </ul>
     </footer>
