--- a/lyricparser.html
+++ b/lyricparser.html
@@ -15,7 +15,7 @@
   <header id="home">
     <div class="logo">
       <a href="index.html">
-        <img src="img/logo.png" alt="" />
+        <img src="img/logo.png" alt="Page logo" />
       </a>
     </div>
     <button class="nav-toggle" aria-label="toggle navigation">
@@ -53,13 +53,14 @@
       <p>Automatically fetch lyrics from different sources for music played with Spotify, Winamp, Google Play Music and
         Youtube.</p>
       <div class="portfolio-item-individual__gallery slideshow">
-        <img class="slideshow__item" src="img/lyricparser-00.png" alt="">
-        <img class="slideshow__item" src="img/lyricparser-01.png" alt="">
-        <img class="slideshow__item" src="img/lyricparser-02.png" alt="">
-        <button class="slideshow__button--left slideshow__button">
+        <img class="slideshow__item" src="img/lyricparser-00.png" tabindex="0" alt="Project presentation">
+        <img class="slideshow__item" src="img/lyricparser-01.png" tabindex="0" alt="Showing western lyrics">
+        <img class="slideshow__item" src="img/lyricparser-02.png" tabindex="0"
+          alt="Showing japanese lyrics and settings window">
+        <button class="slideshow__button--left slideshow__button" aria-label="Previous slide">
           <i class="fas fa-angle-left fa-w-16 fa-3x"></i>
         </button>
-        <button class="slideshow__button--right slideshow__button">
+        <button class="slideshow__button--right slideshow__button" aria-label="Next slide">
           <i class="fas fa-angle-right fa-w-16 fa-3x"></i></button>
       </div>
     </div>
@@ -76,7 +77,7 @@
 
   <div class="slideshow__modal modal">
     <div class="slideshow__modal__content modal__content">
-      <img class="modal__content__img"></img>
+      <img class="modal__content__image"></img>
     </div>
     <button class="modal__close-button btn">
       <i class="far fa-times-circle fa-w-16 fa-3x"></i>
@@ -85,22 +86,25 @@
   <a href="#home" class="top-button btn">top</a>
 
   <footer class="footer border-gradient-top">
-    <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie@gmail.com</a>
-    <ul class="social-list">
-      <li class="social-list__item">
-        <a class="social-list__link" href="https://codepen.io/mikan9"><i class="fab fa-codepen"></i></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link" href="https://twitter.com/mikanx9"><i class="fab fa-twitter"></i></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link" href="https://linkedin.com/in/stephanie-ahlström"><i
-            class="fab fa-linkedin"></i></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link" href="https://github.com/mikan9/"><i class="fab fa-github"></i></a>
-      </li>
-    </ul>
+    <a href="mailto:ahlstrom.m.stephanie@gmail.com" class="footer__link">ahlstrom.m.stephanie<WBR>@gmail.com</a>
+      <ul class="social-list">
+        <li class="social-list__item">
+          <a class="social-list__link" href="https://codepen.io/mikan9" aria-label="Stephanie Ahlström on Codepen"><i
+              class="fab fa-codepen"></i></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link" href="https://twitter.com/mikanx9" aria-label="Stephanie Ahlström on Twitter"><i
+              class="fab fa-twitter"></i></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link" href="https://linkedin.com/in/stephanie-ahlström"
+            aria-label="Stephanie Ahlström on LinkIn"><i class="fab fa-linkedin"></i></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link" href="https://github.com/mikan9/" aria-label="Stephanie Ahlström on Github"><i
+              class="fab fa-github"></i></a>
+        </li>
+      </ul>
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/index.js"></script>
