Fix about-me__img z-index

--- a/index.html
+++ b/index.html
@@ -82,22 +82,24 @@
     </section>
 
     <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">
-            .NET & Web developer based out of Strängnäs
-        </p>
-
-        <div class="about-me__body">
-            <p>
-                Front-end developer residing in Sweden with a serious passion for gaming, programming and music.
-                Striving to make the web more intuitive, dynamic and user-friendly.
+        <div class="about-me__content">
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__subtitle--about">
+                .NET & Web developer based out of Strängnäs
             </p>
-            <p>Huge Supernatural geek. Like my coffee black and tea bitter. Listen to everything from heavy metal to
-                EDM. Christmas songs in the summer, don't judge me.</p>
-            <p>Mainly work with HTML/CSS/JS, .NET, React</p>
-        </div>
 
-        <img src="img/profile-02.png" alt="filtered picture of Stephanie" class="about-me__img" />
+            <div class="about-me__body">
+                <p>
+                    Front-end developer residing in Sweden with a serious passion for gaming, programming and music.
+                    Striving to make the web more intuitive, dynamic and user-friendly.
+                </p>
+                <p>Huge Supernatural geek. Like my coffee black and tea bitter. Listen to everything from heavy metal to
+                    EDM. Christmas songs in the summer, don't judge me.</p>
+                <p>Mainly work with HTML/CSS/JS, .NET, React</p>
+            </div>
+
+            <img src="img/profile-02.png" alt="filtered picture of Stephanie" class="about-me__img" />
+        </div>
     </section>
 
     <section class="my-work" id="work">
