Correct W8 IE 10 tile color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" href="favicon-180.png" sizes="180x180">
 
     <!-- Windows 8 IE 10-->
-    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileColor" content="#E5957A">
     <meta name="msapplication-TileImage" content="favicon-144.png">
 
     <!-- Windows 8.1 + IE11 and above -->
