--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stephanie Ahlström - Front End Developer</title>
+
     <!-- generics -->
     <link rel="icon" href="favicon-32.png" sizes="32x32">
     <link rel="icon" href="favicon-57.png" sizes="57x57">
@@ -16,7 +17,9 @@
     <link rel="icon" href="favicon-228.png" sizes="228x228">
 
     <!-- Android -->
-    <link rel="shortcut icon" sizes="196x196" href="favicon-196.png"> <!-- iOS -->
+    <link rel="shortcut icon" sizes="196x196" href="favicon-196.png">
+
+    <!-- iOS -->
     <link rel="apple-touch-icon" href="favicon-120.png" sizes="120x120">
     <link rel="apple-touch-icon" href="favicon-152.png" sizes="152x152">
     <link rel="apple-touch-icon" href="favicon-180.png" sizes="180x180">
