--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <a href="#about" class="nav__link">About me</a>
                 </li>
                 <li class="nav__item border-gradient-top">
-                    <a href="#work" class="nav__link">Projects</a>
+                    <a href="#projects" class="nav__link">Projects</a>
                 </li>
             </ul>
         </nav>
@@ -127,7 +127,7 @@
         </div>
     </section>
 
-    <section class="my-work" id="work">
+    <section class="projects" id="projects">
         <h2 class="section__title section__title--work">Projects</h2>
         <p class="section__subtitle section__subtitle--work">
             A selection of my personal projects
@@ -135,6 +135,13 @@
 
         <div class="portfolio">
             <div class="portfolio__container">
+                <div class="portfolio__item">
+                    <img src="img/lyrico-00.png" alt="" class="portfolio__img" />
+                    <div class="portfolio__item__description">.NET / Xamarin.Forms<br>Android / iOS</div>
+                    <a href="lyrico.html" class="portfolio__item__button btn">
+                        more info
+                    </a>
+                </div>
                 <div class="portfolio__item">
                     <img src="img/lyricparser-00.png" alt="" class="portfolio__img" />
                     <div class="portfolio__item__description">.NET / WPF</div>
@@ -179,6 +186,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/observers.js"></script>
 </body>
 
 </html>
