Add class to background image

--- a/lyrico.html
+++ b/lyrico.html
@@ -49,7 +49,7 @@
 
   <section class="portfolio-item-individual portfolio-item-individual--top">
     <div class="portfolio-item-individual__content">
-      <img src="img/lyrico-background.png" alt="">
+      <img class="portfolio-item-individual__background" src="img/lyrico-background.png" alt="">
       <p>Automatically display lyrics for music played with your Spotify account.</p>
       <div class="portfolio-item-individual__gallery slideshow">
         <img class="slideshow__item" src="img/lyrico-00.png" tabindex="0" alt="Project presentation">
