--- a/lyricparser.html
+++ b/lyricparser.html
@@ -49,7 +49,7 @@
 
   <section class="portfolio-item-individual portfolio-item-individual--top">
     <div class="portfolio-item-individual__content">
-      <img src="img/lyricparser-background.png" alt="">
+      <img class="portfolio-item-individual__background" src="img/lyricparser-background.png" alt="">
       <p>Automatically fetch lyrics from different sources for music played with Spotify, Winamp, Google Play Music and
         Youtube.</p>
       <div class="portfolio-item-individual__gallery slideshow">
