--- a/sorting-algorithm-visualizer.html
+++ b/sorting-algorithm-visualizer.html
@@ -49,7 +49,7 @@
 
   <section class="portfolio-item-individual portfolio-item-individual--top">
     <div class="portfolio-item-individual__content">
-      <img src="img/sav-background.png" alt="">
+      <img class="portfolio-item-individual__background" src="img/sav-background.png" alt="">
       <p>Generates a bar graph visualization of an array, sorts it using one out of 10 predefined algorithms and updates
         the graph in realtime.</p>
       <div class="portfolio-item-individual__gallery slideshow">
