Add slideshow buttons to modal

--- a/lyricparser.html
+++ b/lyricparser.html
@@ -61,7 +61,8 @@
           <i class="fas fa-angle-left fa-w-16 fa-3x"></i>
         </button>
         <button class="slideshow__button--right slideshow__button" aria-label="Next slide">
-          <i class="fas fa-angle-right fa-w-16 fa-3x"></i></button>
+          <i class="fas fa-angle-right fa-w-16 fa-3x"></i>
+        </button>
       </div>
     </div>
   </section>
@@ -78,6 +79,12 @@
   <div class="slideshow__modal modal">
     <div class="slideshow__modal__content modal__content">
       <img class="modal__content__image"></img>
+      <button class="slideshow__button--left modal__slideshow__button" aria-label="Previous slide">
+        <i class="fas fa-angle-left fa-w-16 fa-3x"></i>
+      </button>
+      <button class="slideshow__button--right modal__slideshow__button" aria-label="Next slide">
+        <i class="fas fa-angle-right fa-w-16 fa-3x"></i>
+      </button>
     </div>
     <button class="modal__close-button btn">
       <i class="far fa-times-circle fa-w-16 fa-3x"></i>
