Update project description

--- a/lyricparser.html
+++ b/lyricparser.html
@@ -50,8 +50,7 @@
   <section class="portfolio-item-individual portfolio-item-individual--top">
     <div class="portfolio-item-individual__content">
       <img class="portfolio-item-individual__background" src="img/lyricparser-background.png" alt="">
-      <p>Automatically fetch lyrics from different sources for music played with Spotify, Winamp, Google Play Music and
-        Youtube.</p>
+      <p>Automatically fetch lyrics from different sources for music played with media players that integrates with Windows 10 Media Volume Control overlay (eg. Spotify, Chrome).</p>
       <div class="portfolio-item-individual__gallery slideshow">
         <img class="slideshow__item" src="img/lyricparser-00.png" tabindex="0" alt="Project presentation">
         <img class="slideshow__item" src="img/lyricparser-01.png" tabindex="0" alt="Showing western lyrics">
@@ -69,8 +68,8 @@
 
   <section class="portfolio-item-individual portfolio-item-individual--bottom">
     <div class="portfolio-item-individual__content">
-      <p>Supports lyrics for Western and Japanese (incl. anime and touhou) music. With option for other categories
-        depending on Musicxmatch's catalog of lyrics. </p>
+      <p>Supports lyrics for Western and Japanese (incl. anime, vocaloid and touhou) music. With option for other categories
+        depending on Musixmatch's catalog of lyrics. </p>
       <a href="https://github.com/mikan9/LyricParser/" class="view-site btn">github<i
           class="fas fa-external-link-alt"></i></a>
     </div>
